# shopee-bi-dashboard

./: .gitignore  AGENT.md  CONTRIBUTING.md  README.md  main.py  package-lock.json  pyproject.toml  railway.json  requirements.txt  test.xlsx  test_backend.py
.agents/: AGENTS.md
.claude/: settings.json
.github/DISCUSSION_TEMPLATE/: improvement-announcement.yml  improvement.yml
analytics/: base.py  cancellation.py  city.py  customer.py  hidden_insights.py  payment.py  product.py  province.py  shipping.py  trend.py
backend/: deps.py  main.py
backend/api/: analytics.py  dashboard.py  etl.py  files.py
charts/: excel_charts.py  templates.py
config/: config.py  constants.py
core/: entities.py  exceptions.py  interfaces.py
dashboard/: builder.py
dashboard/sheets/: cancellation.py  city_performance.py  customer_behaviour.py  executive.py  hidden_insight.py  kpi.py  methodology.py  monthly_trend.py  payment.py  product_performance.py  province_performance.py  raw_data.py  shipping.py
database/: connection.py  migrations.py  repository.py  warehouse.py
docs/testing/: UNIT_TEST_REPORT.md
etl/: base.py  log_writer.py  merger.py  validator.py
etl/shopee/: extractor.py  loader.py  pipeline.py  transformer.py
excel/: conditional.py  navigation.py  styles.py  writer.py
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
tests/: conftest.py
utils/: decorators.py  helpers.py  logger.py
wiki_output/: Git-Workflow-Antigravity.md  Git-Workflow.md  _Sidebar.md
(+39 files in other folders)
