[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shopee-bi-dashboard"
version = "1.0.0"
description = "Enterprise-grade Business Intelligence Dashboard for Shopee marketplace analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shopee BI Team" },
]
keywords = ["shopee", "bi", "dashboard", "analytics", "duckdb", "marketplace"]

dependencies = [
    "duckdb>=1.0",
    "polars>=1.0",
    "pandas>=2.0",
    "xlsxwriter>=3.1",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "plotly>=5.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
